--- a/index.html
+++ b/index.html
@@ -5,8 +5,129 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
-
+<header class="page-header">
+  <nav class="navigation">
+<ul class="navigation-list">
+<li class="navigation-item"> 
+  <a class="navigation-link" href="head.html">Главная</a>
+</li>
+<li class="navigation-item"> 
+  <a class="navigation-link" href="about.html">О Седоне</a>
+</li>
+<li class="navigation-item"> 
+  <a class="navigation-link" href="hotels.html">Гостиницы</a>
+</li>
+</ul>
+<ul class="navigation-list navigation-user">
+  <li class="navigation-item"> 
+    <a class="navigation-link" href="#"></a>
+    <span class="visually-hidden">Поиск</span>
+  </li>
+  <li class="navigation-item"> 
+    <a class="navigation-link" href="#"></a>
+    <span class="visually-hidden">Избранное</span>
+  </li>
+  <li class="navigation-item"> 
+    <button type="button">Хочу сюда!</button>
+  </li>
+  </ul>
+  </nav>
+</header>
+<main class="main-index">
+  <p class="visually-hidden">WELCOME</p>
+  <p class="visually-hidden">to the gorgeous</p>
+<h1 class="visually-hidden">SEDONA</h1>
+<cite class="visually-hidden">"Because the Grand Canyon sucks"</cite>
+<img class="logo" src="" alt="Логотип Седона">
+<p><b>Седона — небольшой городок в Аризоне,заслуживающий большего!</b></p>
+  <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
+<section class="advantages">
+  <h2 class="visually-hidden">Преимущества</h2>
+<ul class="advantages-list">
+  <li class="advantages-item">
+    <h3 class="advantages-title">Настоящий городок</h3>
+    <p>&mdash;№1&mdash;</p>
+    <br>Седона — не аттракцион для туристов, там течёт своя жизнь
+    <img class="photo" src="" alt="Город">
+  </li>
+  <li class="advantages-item">
+<h3 class="advantages-title">Жилье</h3>
+<p class="advantages-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+  </li>
+  <li class="advantages-item">
+    <h3 class="advantages-title">Еда</h3>
+    <p class="advantages-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+      </li> 
+      <li class="advantages-item">
+        <h3 class="advantages-title">Сувениры</h3>
+        <p class="advantages-description">Не только китайского, но и настоящего местного производства!</p>
+          </li> 
+          <li class="advantages-item">
+            <img class="photo" src="" alt="Мост дьвола">
+            <h3 class="advantages-title">Там есть мост дьявола</h3>
+            <p>&mdash;№2&mdash;</p>
+            <br>Да, по нему можно пройти! Если вы осмелитесь, разумеется
+              </li>
+              <li class="advantages-item">
+                <h3 class="advantages-title">Небольшая площадь</h3>
+                <p>&mdash;№3&mdash;</p>
+                <br> Все достопримечательности находятся очень близко
+                  </li>
+                  <li class="advantages-item">
+                    <h3 class="advantages-title">Красивая дорога</h3>
+                    <p>&mdash;№4&mdash;</p>
+                    <br>Ехать в Седону из Лас-Вегаса совсем не скучно!
+                      <li class="advantages-item">
+                        <h3 class="advantages-title">Мало туристов</h3>
+                        <p>&mdash;№5&mdash;</p>
+                        <br>Большинство едет в Гранд Каньон и толпится там
+                          </li>
+</ul>
+</section>
+<section class="search">
+<h1 class="section-title">Заинтересовались?</h1>
+<p>Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+<button class="button">Поиск гостиницы в седоне</button>
+</section>
+<section class="newsletter">
+  <h2 class="page-footer-title">Подпишитесь на рассылку</h2>
+  <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
+  <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
+    <input class="field" placeholder="Ваш e-mail" type="email" name="newsletter-email" id="newsletter-email" required>
+    <button class="button newsletter-button" type="submit">
+      <span class="visually-hidden">Подписаться</span>
+    </button>
+  </form>
+</section>
+</main>
+<footer class="page-footer">
+  <section class="footer-social">
+    <ul class="footer-spcial-list">
+      <li class="footer-social-item">
+        <a class="button" href="https://vk.com/htmlacademy">
+          <span class="visually-hidden">Вконтакте</span>
+        </a>
+      </li>
+      <li class="footer-social-item">
+        <a class="button" href="https://t.me/htmlacademy">
+          <span class="visually-hidden">Телеграм</span>
+        </a>
+      </li>
+      <li class="footer-social-item">
+        <a class="button" href="https://www.youtube.com/user/htmlacademyru">
+          <span class="visually-hidden">Ютуб</span>
+        </a>
+      </li>
+    </ul>
+  </section>
+  <section class="footer-contacts">
+    <address class="footer-contacts-phone">
+      <a class="footer-contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+    </address>
+    <a href="https://htmlacademy.ru/">
+    <img src="" alt="Логотип html academy».">
+    </a>
+  </section>
+</footer>
   </body>
 </html>
