Внести изменения в первую страницу и разметить каталог

--- a/catalog.html
+++ b/catalog.html
@@ -71,6 +71,7 @@
                 Wi-Fi
               </label>
               </li>
+              </ul>
             </fieldset>
             <fieldset class="catalog-filter-group">
               <legend class="catalog-filter-title">Тип Жилья:</legend>
@@ -201,7 +202,7 @@
               </li>
             </ul>
             <p class="hostels-total">Гостиниц на странице:</p>
-            <select class="select-control"aria-label="Гостиниц на странице">
+            <select class="select-control" aria-label="Гостиниц на странице">
               <option value="4">4</option>
               <option value="5">5</option>
               <option value="6">6</option>
@@ -210,6 +211,7 @@
       </main>
       <footer class="page-footer">
         <section class="footer-social">
+          <h5 class="visually-hidden">Социальные сети</h5>
           <ul class="footer-spcial-list">
             <li class="footer-social-item">
               <a class="button" href="https://vk.com/htmlacademy">
@@ -229,11 +231,12 @@
           </ul>
         </section>
         <section class="footer-contacts">
+          <h6 class="visually-hidden">Контакты</h6>
           <address class="footer-contacts-phone">
             <a class="footer-contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
           </address>
           <a href="https://htmlacademy.ru/">
-          <img src="" alt="Логотип html academy».">
+          <img src="#" alt="Логотип html academy».">
           </a>
         </section>
       </footer>
