--- a/index.html
+++ b/index.html
@@ -38,41 +38,57 @@
     <p class="visually-hidden">to the gorgeous</p>
     <h1 class="visually-hidden">SEDONA</h1>
     <cite class="visually-hidden">"Because the Grand Canyon sucks"</cite>
-    <img class="logo" src="" alt="Логотип Седона">
+    <img class="logo" src="#" alt="Логотип Седона">
     <p class="about sedona">Седона — небольшой городок в Аризоне,заслуживающий большего!</p>
     <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
     <section class="advantages">
       <h2 class="visually-hidden">Преимущества</h2>
       <ol class="facts">
-        <li class="facts-item">Настоящий городок</li>
-        <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-      <ul class="advantages-list">
-        <img class="photo" src="" alt="Город">
-          <li class="advantages-title">Жилье</li>
-          <p class="advantages-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
-          <li class="advantages-title">Еда</li>
-          <p class="advantages-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
-          <li class="advantages-title">Сувениры</li>
-          <p class="advantages-description">Не только китайского, но и настоящего местного производства!</p>
-      </ul>
-      <li class="facts-item">Там есть мост дьявола</li>
-      <p class="advantages-description" >Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
-      <img class="photo" src="" alt="Мост дьвола">
-      <li class="facts-item">Небольшая площадь</li>
-      <p class="advantages-description">Все достопримечательности находятся очень близко</p>
-      <li class="facts-item">Красивая дорога</li>
-      <p class="advantages-description" >Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-      <li class="facts-item">Мало туристов</li>
-      <p class="advantages-description" >Большинство едет в Гранд Каньон и толпится там</p>
+        <li class="facts-item">Настоящий городок
+          <ul>
+            <li class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</li>
+          </ul>
+          <ul>
+            <li class="advantages-title">Жилье</li>
+            <li class="advantages-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</li>
+            <li class="advantages-title">Еда</li>
+            <li class="advantages-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</li>
+            <li class="advantages-title">Сувениры</li>
+            <li class="advantages-description">Не только китайского, но и настоящего местного производства!</li>
+          </ul>
+        </li>
+      </ol>
+      <img class="photo" src="#" alt="Мост дьвола">
+      <ol start="2">
+        <li class="facts-item">Там есть мост дьявола
+          <ul>
+            <li class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</li>
+          </ul>
+        </li>
+        <li class="facts-item">Небольшая площадь
+          <ul>
+            <li class="advantages-description">Все достопримечательности находятся очень близко</li>
+          </ul>
+        </li>
+        <li class="facts-item">Красивая дорога
+          <ul>
+            <li class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</li>
+          </ul>
+        </li>
+        <li class="facts-item">Мало туристов
+          <ul>
+            <li class="advantages-description">Большинство едет в Гранд Каньон и толпится там</li>
+          </ul>
+        </li>
       </ol>
     </section>
     <section class="search">
-      <h1 class="section-title">Заинтересовались?</h1>
+      <h3 class="section-title">Заинтересовались?</h3>
       <p>Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
       <button class="button">Поиск гостиницы в седоне</button>
     </section>
     <section class="newsletter">
-      <h3 class="page-footer-title">Подпишитесь на рассылку</h3>
+      <h4 class="page-footer-title">Подпишитесь на рассылку</h4>
       <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
       <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
         <input class="field" placeholder="Ваш e-mail" type="email" name="newsletter-email" id="newsletter-email"
@@ -85,6 +101,7 @@
   </main>
   <footer class="page-footer">
     <section class="footer-social">
+      <h5 class="visually-hidden">Социальные сети</h5>
       <ul class="footer-spcial-list">
         <li class="footer-social-item">
           <a class="button" href="https://vk.com/htmlacademy">
@@ -104,11 +121,12 @@
       </ul>
     </section>
     <section class="footer-contacts">
+      <h6 class="visually-hidden">Контакты</h6>
       <address class="footer-contacts-phone">
         <a class="footer-contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
       </address>
       <a href="https://htmlacademy.ru/">
-        <img src="" alt="Логотип html academy».">
+        <img src="#" alt="Логотип html academy».">
       </a>
     </section>
   </footer>
