--- a/catalog.html
+++ b/catalog.html
@@ -7,12 +7,15 @@
   <body>
     <header class="page-header">
         <nav class="navigation">
+          <a href="index.html">
+            <img class="logo" src="#" alt="Логотип Седона">
+          </a>
       <ul class="navigation-list">
       <li class="navigation-item">
         <a class="navigation-link" href="index.html">Главная</a>
       </li>
       <li class="navigation-item">
-        <a class="navigation-link" href="about.html">О Седоне</a>
+        <a class="navigation-link" href="#">О Седоне</a>
       </li>
       <li class="navigation-item">
         <a class="navigation-link" href="hotels.html">Гостиницы</a>
@@ -20,11 +23,11 @@
       </ul>
       <ul class="navigation-list navigation-user">
         <li class="navigation-item">
-          <a class="navigation-link" href="#"></a>
+          <a class="navigation-link" href="Поиск"></a>
           <span class="visually-hidden">Поиск</span>
         </li>
         <li class="navigation-item">
-          <a class="navigation-link" href="#"></a>
+          <a class="navigation-link" href="Избранное"></a>
           <span class="visually-hidden">Избранное</span>
         </li>
         <li class="navigation-item">
@@ -104,13 +107,13 @@
                     <div class="start-n">
                       <span class="start-text">От</span>
                       <div>
-                        <input class="j-price c-input-base-sm" type="text" value="0" name="startN" data-filter-name="priceU">
+                        <input class="j-price c-input-base-sm" type="number" value="0" name="startN" data-filter-name="priceU">
                       </div>
                    </div>
                    <div class="end-n">
                      <span class="end-text">До</span>
                      <div>
-                       <input class="j-price c-input-base-sm" type="text" value="9000" name="endN" data-filter-name="priceU">
+                       <input class="j-price c-input-base-sm" type="number" value="9000" name="endN" data-filter-name="priceU">
                       </div>
                     </div>
                   </div>
@@ -118,14 +121,15 @@
               </div>
             </fieldset>
             <button class="button" type="submit">Применить</button>
-            <a class="update" href="#">Сбросить</a>
+            <button class="button" type="reset">Сбросить</button>
           </form>
-          <h3 class="found-hostels">Найдено гостиниц: 38</h3>
-            <select class="select-control" aria-label="Сортировка">
-              <option value="cheap">Сначала дешёвые</option>
-              <option value="popular">Сначала популярное</option>
-              <option value="expensive">Сначала дорогое</option>
-            </select>
+          <p class="found-hostels">Найдено гостиниц: 38</p>
+          <details>
+            <summary>Сортировка</summary>
+              <a class="dropdown-item" href="#" >Сначала дешёвые</a>
+              <a class="dropdown-item" href="#">Сначала популярное</a>
+              <a class="dropdown-item" href="#">Сначала дорогое</a>
+          </details>
             <a class="button" href="#">
               <span class="visually-hidden">Показать карточки</span>
             </a>
@@ -139,51 +143,51 @@
               <li class="hotels-card">
                 <a class="hotels-card-link" href="#">
                   <img class="hotels-card-image" src="#" alt="">
-                  <h4 class="hotels-card-title">Amara Resort & Spa</h4>
+                  <h3 class="hotels-card-title">Amara Resort & Spa</h3>
                 </a>
                 <p class="hostels-card-type">Гостиница</p>
                 <p class="product-card-price">От 4000 ₽</p>
                 <a class="product-card-button" href="#">Подробнее</a>
                 <a class="product-card-button button" href="#">В избранное</a>
-                <a class="product-card-button rating" href="#">Рейтинг: 8,5</a>
+                <p class="product-card-button rating">Рейтинг: 8,5</p>
               </li>
               <li class="hotels-card">
                 <a class="hotels-card-link" href="#">
                   <img class="hotels-card-image" src="#" alt="">
-                  <h4 class="hotels-card-title">Villas at Poco Diablo</h4>
+                  <h3 class="hotels-card-title">Villas at Poco Diablo</h3>
                 </a>
                 <p class="hostels-card-type">Гостиница</p>
                 <p class="product-card-price">От 5000 ₽</p>
                 <a class="product-card-button" href="#">Подробнее</a>
                 <a class="product-card-button button" href="#">В избранном</a>
-                <a class="product-card-button rating" href="#">Рейтинг: 9,2</a>
+                <p class="product-card-button rating">Рейтинг: 9,2</p>
               </li>
               <li class="hotels-card">
                 <a class="hotels-card-link" href="#">
                   <img class="hotels-card-image" src="#" alt="">
-                  <h4 class="hotels-card-title">Desert Quail Inn</h4>
+                  <h3 class="hotels-card-title">Desert Quail Inn</h3>
                 </a>
                 <p class="hostels-card-type">Гостиница</p>
                 <p class="product-card-price">От 2500 ₽</p>
                 <a class="product-card-button" href="#">Подробнее</a>
                 <a class="product-card-button button" href="#">В избранное</a>
-                <a class="product-card-button rating" href="#">Рейтинг: 6,9</a>
+                <p class="product-card-button rating">Рейтинг: 6,9</p>
               </li>
               <li class="hotels-card">
                 <a class="hotels-card-link" href="#">
                   <img class="hotels-card-image" src="#" alt="">
-                  <h4 class="hotels-card-title">GreenTree Inn</h4>
+                  <h3 class="hotels-card-title">GreenTree Inn</h3>
                 </a>
                 <p class="hostels-card-type">Гостиница</p>
                 <p class="product-card-price">От 1500 ₽</p>
                 <a class="product-card-button" href="#">Подробнее</a>
                 <a class="product-card-button button" href="#">В избранное</a>
-                <a class="product-card-button rating" href="#">Рейтинг: 5,0</a>
+                <p class="product-card-button rating">Рейтинг: 5,0</p>
               </li>
             </ul>
             <ul class="pagination">
               <li class="pagination-item">
-                <a class="pagination-link pagination-current">1</a>
+                <span class="pagination-link pagination-current">1</span>
               </li>
               <li class="pagination-item">
                 <a class="pagination-link" href="#">2</a>
@@ -195,23 +199,35 @@
                 <a class="pagination-link" href="#">4</a>
               </li>
               <li class="pagination-item">
-                <a class="pagination-link" href="#">...</a>
+                <span class="pagination-link">...</span>
               </li>
               <li class="pagination-item">
                 <a class="pagination-link" href="#">10</a>
               </li>
             </ul>
             <p class="hostels-total">Гостиниц на странице:</p>
-            <select class="select-control" aria-label="Гостиниц на странице">
-              <option value="4">4</option>
-              <option value="5">5</option>
-              <option value="6">6</option>
-            </select>
+            <details>
+              <summary class="button-dropdown">Сортировка</summary>
+                <a class="dropdown-item" href="#">4</a>
+                <a class="dropdown-item" href="#">5</a>
+                <a class="dropdown-item" href="#">6</a>
+            </details>
         </section>
-      </main>
+      <section class="newsletter">
+        <h2 class="page-footer-title">Подпишитесь на рассылку</h2>
+        <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
+        <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
+          <input class="field" placeholder="Ваш e-mail" type="email" name="newsletter-email" id="newsletter-email"
+            required>
+          <button class="button newsletter-button" type="submit">
+            <span class="visually-hidden">Подписаться</span>
+          </button>
+        </form>
+      </section>
+    </main>
       <footer class="page-footer">
         <section class="footer-social">
-          <h5 class="visually-hidden">Социальные сети</h5>
+          <h2 class="visually-hidden">Социальные сети</h2>
           <ul class="footer-spcial-list">
             <li class="footer-social-item">
               <a class="button" href="https://vk.com/htmlacademy">
@@ -231,7 +247,7 @@
           </ul>
         </section>
         <section class="footer-contacts">
-          <h6 class="visually-hidden">Контакты</h6>
+          <h2 class="visually-hidden">Контакты</h2>
           <address class="footer-contacts-phone">
             <a class="footer-contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
           </address>
