--- a/2/index.html
+++ b/2/index.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Седона</title>
   <base href="https://htmlacademy-htmlcss.github.io/2069427-sedona-34/2/">
 </head>
+
 <body>
   <header class="page-header">
     <nav class="navigation">
+      <a href="index.html">
+        <img class="logo" src="#" alt="Логотип Седона">
+      </a>
       <ul class="navigation-list">
         <li class="navigation-item">
-          <a class="navigation-link" href="head.html">Главная</a>
+          <a class="navigation-link" href="index.html">Главная</a>
         </li>
         <li class="navigation-item">
-          <a class="navigation-link" href="about.html">О Седоне</a>
+          <a class="navigation-link" href="#">О Седоне</a>
         </li>
         <li class="navigation-item">
           <a class="navigation-link" href="catalog.html">Гостиницы</a>
@@ -21,11 +26,11 @@
       </ul>
       <ul class="navigation-list navigation-user">
         <li class="navigation-item">
-          <a class="navigation-link" href="#"></a>
+          <a class="navigation-link" href="Поиск"></a>
           <span class="visually-hidden">Поиск</span>
         </li>
         <li class="navigation-item">
-          <a class="navigation-link" href="#"></a>
+          <a class="navigation-link" href="Избранное"></a>
           <span class="visually-hidden">Избранное</span>
         </li>
         <li class="navigation-item">
@@ -39,57 +44,56 @@
     <p class="visually-hidden">to the gorgeous</p>
     <h1 class="visually-hidden">SEDONA</h1>
     <cite class="visually-hidden">"Because the Grand Canyon sucks"</cite>
-    <img class="logo" src="#" alt="Логотип Седона">
     <p class="about sedona">Седона — небольшой городок в Аризоне,заслуживающий большего!</p>
     <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
     <section class="advantages">
       <h2 class="visually-hidden">Преимущества</h2>
       <ol class="facts">
-        <li class="facts-item">Настоящий городок
+        <li class="facts-item">
+          <h3>Настоящий городок</h3>
+          <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+          <img class="photo" src="#" alt="Настоящий городок">
           <ul>
-            <li class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</li>
-          </ul>
-          <ul>
-            <li class="advantages-title">Жилье</li>
-            <li class="advantages-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</li>
-            <li class="advantages-title">Еда</li>
-            <li class="advantages-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</li>
-            <li class="advantages-title">Сувениры</li>
-            <li class="advantages-description">Не только китайского, но и настоящего местного производства!</li>
-          </ul>
-        </li>
-      </ol>
-      <img class="photo" src="#" alt="Мост дьвола">
-      <ol start="2">
-        <li class="facts-item">Там есть мост дьявола
-          <ul>
-            <li class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</li>
+            <li class="advantages-title">
+              <h4>Жилье</h4>
+              <p class="advantages-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+            </li>
+            <li class="advantages-title">
+              <h4>Еда</h4>
+              <p class="advantages-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+            </li>
+            <li class="advantages-title">
+              <h4>Сувениры</h4>
+              <p class="advantages-description">Не только китайского, но и настоящего местного производства!</p>
+            </li>
           </ul>
         </li>
-        <li class="facts-item">Небольшая площадь
-          <ul>
-            <li class="advantages-description">Все достопримечательности находятся очень близко</li>
-          </ul>
+        <li class="facts-item">
+          <h3>Там есть мост дьявола</h3>
+          <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+          <img class="photo" src="#" alt="Мост дьвола">
         </li>
-        <li class="facts-item">Красивая дорога
-          <ul>
-            <li class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</li>
-          </ul>
+        <li class="facts-item">
+          <h3>Небольшая площадь</h3>
+          <p class="advantages-description">Все достопримечательности находятся очень близко</p>
         </li>
-        <li class="facts-item">Мало туристов
-          <ul>
-            <li class="advantages-description">Большинство едет в Гранд Каньон и толпится там</li>
-          </ul>
+        <li class="facts-item">
+          <h3>Красивая дорога</h3>
+          <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+        </li>
+        <li class="facts-item">
+          <h3>Мало туристов</h3>
+          <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
         </li>
       </ol>
     </section>
     <section class="search">
-      <h3 class="section-title">Заинтересовались?</h3>
+      <h2 class="section-title">Заинтересовались?</h2>
       <p>Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
       <button class="button">Поиск гостиницы в седоне</button>
     </section>
     <section class="newsletter">
-      <h4 class="page-footer-title">Подпишитесь на рассылку</h4>
+      <h2 class="page-footer-title">Подпишитесь на рассылку</h2>
       <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
       <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
         <input class="field" placeholder="Ваш e-mail" type="email" name="newsletter-email" id="newsletter-email"
@@ -102,7 +106,7 @@
   </main>
   <footer class="page-footer">
     <section class="footer-social">
-      <h5 class="visually-hidden">Социальные сети</h5>
+      <h2 class="visually-hidden">Социальные сети</h2>
       <ul class="footer-spcial-list">
         <li class="footer-social-item">
           <a class="button" href="https://vk.com/htmlacademy">
@@ -122,7 +126,7 @@
       </ul>
     </section>
     <section class="footer-contacts">
-      <h6 class="visually-hidden">Контакты</h6>
+      <h2 class="visually-hidden">Контакты</h2>
       <address class="footer-contacts-phone">
         <a class="footer-contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
       </address>
@@ -132,4 +136,5 @@
     </section>
   </footer>
 </body>
+
 </html>
