--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header class="page-header">
     <nav class="navigation">
       <a href="index.html">
-        <img class="logo" src="#" alt="Логотип Седона">
+        <img class="logo" src="images/index/logo.svg" width="139" height="70" alt="Логотип Седона">
       </a>
       <ul class="navigation-list">
         <li class="navigation-item">
@@ -51,7 +51,7 @@
         <li class="facts-item">
           <h3>Настоящий городок</h3>
           <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-          <img class="photo" src="#" alt="Настоящий городок">
+          <img class="photo" src="images/index/city.jpg" width="800" height="384" alt="Настоящий городок">
           <ul>
             <li class="advantages-title">
               <h4>Жилье</h4>
@@ -70,7 +70,7 @@
         <li class="facts-item">
           <h3>Там есть мост дьявола</h3>
           <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
-          <img class="photo" src="#" alt="Мост дьвола">
+          <img class="photo" src="images/index/devils-bridge.jpg" width="800" height="384" alt="Мост дьвола">
         </li>
         <li class="facts-item">
           <h3>Небольшая площадь</h3>
@@ -130,7 +130,7 @@
         <a class="footer-contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
       </address>
       <a href="https://htmlacademy.ru/">
-        <img src="#" alt="Логотип html academy».">
+        <img src="images/index/logo-htmlacademy.svg" width="115" height="33" alt="Логотип html academy».">
       </a>
     </section>
   </footer>
