--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
     <header class="page-header">
         <nav class="navigation">
           <a href="index.html">
-            <img class="logo" src="#" alt="Логотип Седона">
+            <img class="logo" src="images/catalog/logo.svg" alt="Логотип Седона">
           </a>
       <ul class="navigation-list">
       <li class="navigation-item">
@@ -142,7 +142,7 @@
             <ul class="hotels-list">
               <li class="hotels-card">
                 <a class="hotels-card-link" href="#">
-                  <img class="hotels-card-image" src="#" alt="">
+                  <img class="hotels-card-image" src="images/catalog/hotel-1.jpg" width="300" height="211" alt="Amara Resort & Spa">
                   <h3 class="hotels-card-title">Amara Resort & Spa</h3>
                 </a>
                 <p class="hostels-card-type">Гостиница</p>
@@ -153,7 +153,7 @@
               </li>
               <li class="hotels-card">
                 <a class="hotels-card-link" href="#">
-                  <img class="hotels-card-image" src="#" alt="">
+                  <img class="hotels-card-image" src="images/catalog/hotel-2.jpg" width="300" height="211" alt="Villas at Poco Diablo">
                   <h3 class="hotels-card-title">Villas at Poco Diablo</h3>
                 </a>
                 <p class="hostels-card-type">Гостиница</p>
@@ -164,7 +164,7 @@
               </li>
               <li class="hotels-card">
                 <a class="hotels-card-link" href="#">
-                  <img class="hotels-card-image" src="#" alt="">
+                  <img class="hotels-card-image" src="images/catalog/hotel-3.jpg" width="300" height="211" alt="Desert Quail Inn">
                   <h3 class="hotels-card-title">Desert Quail Inn</h3>
                 </a>
                 <p class="hostels-card-type">Гостиница</p>
@@ -175,7 +175,7 @@
               </li>
               <li class="hotels-card">
                 <a class="hotels-card-link" href="#">
-                  <img class="hotels-card-image" src="#" alt="">
+                  <img class="hotels-card-image" src="images/catalog/hotel-4.jpg" width="300" height="211" alt="GreenTree Inn">
                   <h3 class="hotels-card-title">GreenTree Inn</h3>
                 </a>
                 <p class="hostels-card-type">Гостиница</p>
@@ -252,7 +252,7 @@
             <a class="footer-contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
           </address>
           <a href="https://htmlacademy.ru/">
-          <img src="#" alt="Логотип html academy».">
+            <img src="images/catalog/logo-htmlacademy.svg" width="115" height="33" alt="Логотип html academy».">
           </a>
         </section>
       </footer>
