:heavy_check_mark: Сборка #3

--- a/3/index.html
+++ b/3/index.html
@@ -41,7 +41,7 @@
     </nav>
   </header>
   <main class="main-index">
-    <img src="/images/index/welcome.png" width="458" height="352" alt="Добро пожаловать в Седону" >
+    <img src="images/index/welcome.png" width="458" height="352" alt="Добро пожаловать в Седону" >
     <p class="visually-hidden">WELCOME</p>
     <p class="visually-hidden">to the gorgeous</p>
     <h1 class="visually-hidden">SEDONA</h1>
